bug fix for duplicate question validation