@@ -4,6 +4,7 @@ import com.beeja.api.performance_management.enums.CycleStatus;
 import com.beeja.api.performance_management.enums.ErrorCode;
 import com.beeja.api.performance_management.enums.ErrorType;
 import com.beeja.api.performance_management.enums.ProviderStatus;
+import com.beeja.api.performance_management.exceptions.BadRequestException;
 import com.beeja.api.performance_management.exceptions.InvalidOperationException;
 import com.beeja.api.performance_management.exceptions.ResourceNotFoundException;
 import com.beeja.api.performance_management.model.EvaluationCycle;
@@ -19,7 +20,10 @@ import com.beeja.api.performance_management.response.ReceiverResponse;
 import com.beeja.api.performance_management.service.EvaluationCycleService;
 import com.beeja.api.performance_management.service.FeedbackReceiversService;
 import com.beeja.api.performance_management.service.QuestionnaireService;
-import com.beeja.api.performance_management.utils.*;
+import com.beeja.api.performance_management.utils.BuildErrorMessage;
+import com.beeja.api.performance_management.utils.Constants;
+import com.beeja.api.performance_management.utils.ErrorUtils;
+import com.beeja.api.performance_management.utils.UserContext;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -29,59 +33,113 @@ import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Implementation of {@link EvaluationCycleService}.
- * <p>
- * Handles CRUD operations, validation, and questionnaire linking for Evaluation Cycles.
- * Enforces tenant-level isolation using {@link UserContext}.
+ * Service implementation for managing Evaluation Cycles.
+ * Handles creation, updating, retrieval, and deletion of evaluation cycles,
+ * including associated questionnaire data and status transitions.
+ * Implements {@link EvaluationCycleService}.
  */
 @Slf4j
 @Service
 public class EvaluationCycleServiceImpl implements EvaluationCycleService {
 
-    @Autowired private EvaluationCycleRepository cycleRepository;
-    @Autowired private QuestionnaireService questionnaireService;
-    @Autowired private FeedbackProviderRepository feedbackProviderRepository;
-    @Autowired private FeedbackReceiverRepository feedbackReceiverRepository;
-    @Autowired private FeedbackResponseRepository feedbackResponseRepository;
-    @Autowired private FeedbackReceiversService feedbackReceiversService;
+    @Autowired
+    private EvaluationCycleRepository cycleRepository;
+
+    @Autowired
+    private QuestionnaireService questionnaireService;
+
+    @Autowired
+    private FeedbackProviderRepository feedbackProviderRepository;
+
+    @Autowired
+    private FeedbackReceiverRepository feedbackReceiverRepository;
+
+    @Autowired
+    private FeedbackResponseRepository feedbackResponseRepository;
+
+    @Autowired
+    private FeedbackReceiversService feedbackReceiversService;
+
     /**
-     * Creates a new evaluation cycle.
+     * Creates a new evaluation cycle with IN_PROGRESS status.
+     * Validates date ranges and saves to the repository.
      *
-     * @param cycle the evaluation cycle entity
-     * @return the saved evaluation cycle
+     * @param cycle EvaluationCycle object to be created
+     * @return Saved EvaluationCycle
+     * @throws InvalidOperationException if validation fails or save fails
      */
     @Override
     public EvaluationCycle createCycle(EvaluationCycle cycle) {
+        log.info(Constants.INFO_CREATING_EVALUATION_CYCLE, cycle.getName());
+
         validateCycleDates(cycle);
+
         String orgId = UserContext.getLoggedInUserOrganization().get(Constants.ID).toString();
-        cycle.setOrganizationId(orgId);
-        cycle.setStatus(CycleStatus.IN_PROGRESS);
-        try {
-            return cycleRepository.save(cycle);
-        } catch (Exception e) {
-            throw new InvalidOperationException(ErrorUtils.formatError(
-                    ErrorType.INTERNAL_SERVER_ERROR,
-                    ErrorCode.DATABASE_ERROR,
-                    Constants.ERROR_SAVING_EVALUATION_CYCLE));
+        EvaluationCycle newCycle = new EvaluationCycle();
+        newCycle.setOrganizationId(orgId);
+
+        if (cycle.getName() != null) {
+            newCycle.setName(cycle.getName());
         }
+        if (cycle.getType() != null) {
+            newCycle.setType(cycle.getType());
+        }
+        if (cycle.getFormDescription() != null) {
+            newCycle.setFormDescription(cycle.getFormDescription());
+        }
+        if (cycle.getStartDate() != null) {
+            newCycle.setStartDate(cycle.getStartDate());
+        }
+        if (cycle.getEndDate() != null) {
+            newCycle.setEndDate(cycle.getEndDate());
+        }
+        if (cycle.getFeedbackDeadline() != null) {
+            newCycle.setFeedbackDeadline(cycle.getFeedbackDeadline());
+        }
+        if (cycle.getSelfEvalDeadline() != null) {
+            newCycle.setSelfEvalDeadline(cycle.getSelfEvalDeadline());
+        }
+        if (cycle.getQuestionnaireId() != null) {
+            newCycle.setQuestionnaireId(cycle.getQuestionnaireId());
+        }
+
+        newCycle.setStatus(CycleStatus.IN_PROGRESS);
+
+        try {
+            newCycle = cycleRepository.save(newCycle);
+        } catch (Exception e) {
+            log.error(Constants.ERROR_SAVING_EVALUATION_CYCLE, e);
+            throw new InvalidOperationException(
+                    ErrorUtils.formatError(
+                            ErrorType.INTERNAL_SERVER_ERROR,
+                            ErrorCode.DATABASE_ERROR,
+                            Constants.ERROR_SAVING_EVALUATION_CYCLE
+                    )
+            );
+        }
+
+        log.info(Constants.INFO_EVALUATION_CYCLE_CREATED, newCycle.getId());
+        return newCycle;
     }
 
     /**
-     * Creates a new evaluation cycle along with its questionnaire.
+     * Creates a new evaluation cycle along with an optional set of associated questions.
+     * Flow:
+     *  1) Create and save EvaluationCycle first (so we have cycleId).
+     *  2) If questions are provided, create Questionnaire with organizationId + cycleId.
+     *  3) Attach questionnaireId back to the saved cycle.
      *
-     * @param dto the DTO containing cycle and questions
-     * @return the saved cycle details DTO
+     * @param dto The data transfer object containing details of the evaluation cycle and optional questions.
+     * @return An {@link EvaluationCycleDetailsDto} containing the persisted evaluation cycle and the linked questionnaire (if created).
+     * @throws InvalidOperationException if there is an error during questionnaire creation or cycle persistence.
      */
     @Override
     public EvaluationCycleDetailsDto createCycleWithQuestions(EvaluationCycleCreateDto dto) {
-        Questionnaire savedQuestionnaire = null;
-        if (dto.getQuestions() != null && !dto.getQuestions().isEmpty()) {
-            Questionnaire q = new Questionnaire();
-            q.setQuestions(dto.getQuestions());
-            savedQuestionnaire = questionnaireService.createQuestionnaire(q);
-        }
+        log.info(Constants.INFO_CREATING_CYCLE_WITH_QUESTIONS, dto.getName());
 
         String orgId = UserContext.getLoggedInUserOrganization().get(Constants.ID).toString();
+
+        // 1) Build and save the EvaluationCycle first
         EvaluationCycle cycle = new EvaluationCycle();
         cycle.setOrganizationId(orgId);
         cycle.setName(dto.getName());
@@ -92,14 +150,94 @@ public class EvaluationCycleServiceImpl implements EvaluationCycleService {
         cycle.setFeedbackDeadline(dto.getFeedbackDeadline());
         cycle.setSelfEvalDeadline(dto.getSelfEvalDeadline());
         cycle.setStatus(dto.getStatus() != null ? dto.getStatus() : CycleStatus.IN_PROGRESS);
-        if (savedQuestionnaire != null) cycle.setQuestionnaireId(savedQuestionnaire.getId());
+
         validateCycleDates(cycle);
-        cycle = cycleRepository.save(cycle);
-        return new EvaluationCycleDetailsDto(cycle, savedQuestionnaire);
+
+        EvaluationCycle savedCycle;
+        try {
+            savedCycle = cycleRepository.save(cycle);
+        } catch (Exception e) {
+            log.error(Constants.ERROR_SAVING_EVALUATION_CYCLE, e);
+            throw new InvalidOperationException(
+                    ErrorUtils.formatError(
+                            ErrorType.INTERNAL_SERVER_ERROR,
+                            ErrorCode.DATABASE_ERROR,
+                            Constants.ERROR_SAVING_EVALUATION_CYCLE
+                    )
+            );
+        }
+
+        Questionnaire savedQuestionnaire = null;
+
+        // 2) If questions exist, create Questionnaire and tag it with this cycle's id
+        if (dto.getQuestions() != null && !dto.getQuestions().isEmpty()) {
+            Questionnaire questionnaire = new Questionnaire();
+            questionnaire.setOrganizationId(orgId);
+            questionnaire.setCycleId(savedCycle.getId());     // IMPORTANT: link questionnaire to this cycle
+            questionnaire.setQuestions(dto.getQuestions());
+
+            try {
+                // Let BadRequestException (e.g., duplicate questions) bubble up
+                savedQuestionnaire = questionnaireService.createQuestionnaire(questionnaire);
+            } catch (BadRequestException bre) {
+                // Questionnaire validation failed (e.g., duplicate questions)
+                // Roll back the cycle we just created so we don't leave an empty/orphan cycle
+                rollbackCycleSafe(savedCycle);
+                throw bre;
+            } catch (Exception e) {
+                log.error(Constants.ERROR_CREATING_QUESTIONNAIRE, e);
+                // Any other error during questionnaire creation -> also roll back the cycle
+                rollbackCycleSafe(savedCycle);
+                throw new InvalidOperationException(
+                        ErrorUtils.formatError(
+                                ErrorType.INTERNAL_SERVER_ERROR,
+                                ErrorCode.DATABASE_ERROR,
+                                Constants.ERROR_CREATING_QUESTIONNAIRE
+                        )
+                );
+            }
+
+            // 3) Attach questionnaireId to the saved cycle and update it
+            if (savedQuestionnaire != null) {
+                savedCycle.setQuestionnaireId(savedQuestionnaire.getId());
+                try {
+                    savedCycle = cycleRepository.save(savedCycle);
+                } catch (Exception e) {
+                    log.error(Constants.ERROR_UPDATING_EVALUATION_CYCLE, e);
+                    throw new InvalidOperationException(
+                            ErrorUtils.formatError(
+                                    ErrorType.INTERNAL_SERVER_ERROR,
+                                    ErrorCode.DATABASE_ERROR,
+                                    Constants.ERROR_UPDATING_EVALUATION_CYCLE
+                            )
+                    );
+                }
+            }
+        }
+
+        log.info(Constants.INFO_EVALUATION_CYCLE_CREATED, savedCycle.getId());
+        return new EvaluationCycleDetailsDto(savedCycle, savedQuestionnaire);
     }
 
     /**
-     * Retrieves all evaluation cycles for the current organization.
+     * Safely roll back (delete) a cycle if something fails while creating its questionnaire.
+     */
+    private void rollbackCycleSafe(EvaluationCycle savedCycle) {
+        if (savedCycle == null || savedCycle.getId() == null) {
+            return;
+        }
+        try {
+            cycleRepository.deleteById(savedCycle.getId());
+            log.info("Rolled back evaluation cycle with id: {}", savedCycle.getId());
+        } catch (Exception ex) {
+            // We log this but don't override the original exception
+            log.error("Failed to rollback evaluation cycle with id: {}", savedCycle.getId(), ex);
+        }
+    }
+
+    /**
+     * Retrieves all evaluation cycles for the current organization and resolves their statuses
+     * using feedback receivers/providers.
      *
      * @return list of evaluation cycles
      */
@@ -108,14 +246,11 @@ public class EvaluationCycleServiceImpl implements EvaluationCycleService {
         String orgId = UserContext.getLoggedInUserOrganization().get(Constants.ID).toString();
         List<EvaluationCycle> cycles = cycleRepository.findByOrganizationId(orgId);
 
-        if (cycles.isEmpty()) {
-            ErrorUtils.formatError(
-                    ErrorType.SUCCESS,
-                    ErrorCode.NO_EVALUATION_CYCLES_FOUND,
-                    Constants.NO_EVALUATION_CYCLE
-            );
+        if (cycles == null || cycles.isEmpty()) {
+            log.info(Constants.NO_EVALUATION_CYCLE);
             return List.of();
         }
+
 
         List<EvaluationCycle> updatedCycles = new ArrayList<>(cycles.size());
 
@@ -150,13 +285,17 @@ public class EvaluationCycleServiceImpl implements EvaluationCycleService {
             updatedCycles.add(cycle);
         }
 
-        cycleRepository.saveAll(updatedCycles);
+        try {
+            cycleRepository.saveAll(updatedCycles);
+        } catch (Exception e) {
+            log.error("Failed to persist updated cycle statuses: {}", e.getMessage(), e);
+        }
 
         return updatedCycles;
     }
 
     /**
-     * Retrieves an evaluation cycle by ID.
+     * Retrieves an evaluation cycle by ID for the current organization.
      *
      * @param id the cycle ID
      * @return the evaluation cycle
@@ -193,7 +332,7 @@ public class EvaluationCycleServiceImpl implements EvaluationCycleService {
     }
 
     /**
-     * Updates an existing evaluation cycle.
+     * Updates an existing evaluation cycle if not completed.
      *
      * @param id    cycle ID
      * @param cycle updated cycle data
@@ -201,15 +340,20 @@ public class EvaluationCycleServiceImpl implements EvaluationCycleService {
      */
     @Override
     public EvaluationCycle updateCycle(String id, EvaluationCycle cycle) {
+        log.info(Constants.INFO_UPDATING_EVALUATION_CYCLE, id);
+
         EvaluationCycle existing = getCycleById(id);
-        if (existing.getStatus() == CycleStatus.COMPLETED)
-            throw new InvalidOperationException(ErrorUtils.formatError(
-                    ErrorType.VALIDATION_ERROR,
-                    ErrorCode.INVALID_OPERATION,
-                    Constants.ERROR_CANNOT_UPDATE_PUBLISHED_CYCLE
-            ));
+
+        if (existing.getStatus() == CycleStatus.COMPLETED) {
+            throw new InvalidOperationException(
+                    ErrorUtils.formatError(
+                            ErrorType.VALIDATION_ERROR,
+                            ErrorCode.INVALID_OPERATION,
+                            Constants.ERROR_CANNOT_UPDATE_PUBLISHED_CYCLE));
+        }
 
         validateCycleDates(cycle);
+
         existing.setName(cycle.getName());
         existing.setType(cycle.getType());
         existing.setStartDate(cycle.getStartDate());
@@ -219,7 +363,21 @@ public class EvaluationCycleServiceImpl implements EvaluationCycleService {
         existing.setFormDescription(cycle.getFormDescription());
         existing.setStatus(cycle.getStatus());
         existing.setQuestionnaireId(cycle.getQuestionnaireId());
-        return cycleRepository.save(existing);
+
+        try {
+            existing = cycleRepository.save(existing);
+        } catch (Exception e) {
+            log.error(Constants.ERROR_UPDATING_EVALUATION_CYCLE, e);
+            throw new InvalidOperationException(
+                    ErrorUtils.formatError(
+                            ErrorType.INTERNAL_SERVER_ERROR,
+                            ErrorCode.DATABASE_ERROR,
+                            Constants.ERROR_UPDATING_EVALUATION_CYCLE
+                    ));
+        }
+
+        log.info(Constants.INFO_EVALUATION_CYCLE_UPDATED_SUCCESSFULLY, existing.getId());
+        return existing;
     }
 
     /**
@@ -231,57 +389,96 @@ public class EvaluationCycleServiceImpl implements EvaluationCycleService {
      */
     @Override
     public EvaluationCycleDetailsDto updateFullCycle(String id, EvaluationCycleDetailsDto dto) {
+        log.info(Constants.INFO_FULL_UPDATE_START, id);
+
         EvaluationCycle cycle = getCycleById(id);
+        log.info(Constants.INFO_EXISTING_CYCLE_FETCHED, cycle.getName(), cycle.getStatus());
+
         cycle.setName(dto.getName());
         cycle.setType(dto.getType());
         cycle.setStartDate(dto.getStartDate());
         cycle.setEndDate(dto.getEndDate());
         cycle.setFeedbackDeadline(dto.getFeedbackDeadline());
         cycle.setSelfEvalDeadline(dto.getSelfEvalDeadline());
-        cycle.setFormDescription(dto.getFormDescription());
         cycle.setStatus(dto.getStatus());
+        cycle.setFormDescription(dto.getFormDescription());
+
+        log.info(Constants.INFO_UPDATING_CYCLE_FIELDS, id);
         EvaluationCycle updatedCycle = updateCycle(id, cycle);
+
         Questionnaire updatedQuestionnaire = null;
 
         if (dto.getQuestions() != null && !dto.getQuestions().isEmpty()) {
-            if (updatedCycle.getQuestionnaireId() == null || updatedCycle.getQuestionnaireId().isBlank()) {
+            log.info(Constants.INFO_UPDATING_QUESTIONS, id);
+
+            String questionnaireId = cycle.getQuestionnaireId();
+
+            if (questionnaireId == null || questionnaireId.trim().isEmpty()) {
+                // No questionnaire yet -> create a new one tied to this cycle
                 updatedQuestionnaire = new Questionnaire();
+                updatedQuestionnaire.setOrganizationId(cycle.getOrganizationId());
+                updatedQuestionnaire.setCycleId(cycle.getId());           // IMPORTANT: link to this cycle
                 updatedQuestionnaire.setQuestions(dto.getQuestions());
+
                 updatedQuestionnaire = questionnaireService.createQuestionnaire(updatedQuestionnaire);
-                updatedCycle.setQuestionnaireId(updatedQuestionnaire.getId());
-                updateCycle(id, updatedCycle);
+
+                cycle.setQuestionnaireId(updatedQuestionnaire.getId());
+                updatedCycle = updateCycle(id, cycle);
             } else {
-                updatedQuestionnaire = questionnaireService.updateQuestions(updatedCycle.getQuestionnaireId(), dto.getQuestions());
+                // Questionnaire already exists -> update its questions only
+                updatedQuestionnaire = questionnaireService.updateQuestions(questionnaireId, dto.getQuestions());
             }
         }
+        log.info(Constants.INFO_FULL_UPDATE_COMPLETED, id);
         return new EvaluationCycleDetailsDto(updatedCycle, updatedQuestionnaire);
     }
 
     /**
-     * Updates cycle status.
+     * Updates the status of a given cycle.
      *
-     * @param id     cycle ID
-     * @param status new status
-     * @return updated cycle
+     * @param id Cycle ID
+     * @param status New CycleStatus
+     * @return Updated EvaluationCycle
+     * @throws InvalidOperationException if status transition is invalid
      */
     @Override
     public EvaluationCycle updateCycleStatus(String id, CycleStatus status) {
-        if (status == null)
-            throw new InvalidOperationException(ErrorUtils.formatError(
-                    ErrorType.VALIDATION_ERROR,
-                    ErrorCode.INVALID_INPUT,
-                    Constants.ERROR_STATUS_CANNOT_BE_NULL
-            ));
+        log.info(Constants.INFO_UPDATING_EVALUATION_CYCLE_STATUS, id);
+
+        if (status == null) {
+            throw new InvalidOperationException(
+                    ErrorUtils.formatError(
+                            ErrorType.VALIDATION_ERROR,
+                            ErrorCode.INVALID_INPUT,
+                            Constants.ERROR_STATUS_CANNOT_BE_NULL
+                    ));
+        }
+
         EvaluationCycle cycle = getCycleById(id);
         validateStatusTransition(cycle.getStatus(), status);
         cycle.setStatus(status);
-        return cycleRepository.save(cycle);
+
+        try {
+            cycle = cycleRepository.save(cycle);
+        } catch (Exception e) {
+            log.error(Constants.ERROR_FAILED_UPDATE_CYCLE_STATUS, id, e);
+            throw new InvalidOperationException(
+                    ErrorUtils.formatError(
+                            ErrorType.INTERNAL_SERVER_ERROR,
+                            ErrorCode.DATABASE_ERROR,
+                            Constants.ERROR_UPDATING_EVALUATION_CYCLE_STATUS
+                    ));
+        }
+
+        log.info(Constants.INFO_UPDATED_CYCLE_STATUS, status, id);
+        return cycle;
     }
 
     /**
      * Deletes a cycle by ID.
      *
-     * @param id cycle ID
+     * @param id Cycle ID
+     * @throws ResourceNotFoundException if not found
      */
     @Override
     public void deleteCycle(String id) {
@@ -293,6 +490,7 @@ public class EvaluationCycleServiceImpl implements EvaluationCycleService {
                                 ErrorType.RESOURCE_NOT_FOUND_ERROR,
                                 ErrorCode.RESOURCE_NOT_FOUND,
                                 Constants.ERROR_EVALUATION_CYCLE_NOT_FOUND + id)));
+
 
         String questionnaireId = cycle.getQuestionnaireId();
 
@@ -355,90 +553,95 @@ public class EvaluationCycleServiceImpl implements EvaluationCycleService {
     }
 
     /**
-     * Retrieves all cycles by status.
+     * Retrieves all cycles by status for the current organization.
      *
      * @param status cycle status
      * @return list of matching cycles
      */
     @Override
     public List<EvaluationCycle> getCyclesByStatus(CycleStatus status) {
+        log.info(Constants.INFO_FETCH_CYCLES_BY_STATUS, status);
         String orgId = UserContext.getLoggedInUserOrganization().get(Constants.ID).toString();
         List<EvaluationCycle> cycles = cycleRepository.findByOrganizationIdAndStatus(orgId, status);
-        if (cycles.isEmpty())
-            throw new ResourceNotFoundException(BuildErrorMessage.buildErrorMessage(
-                    ErrorType.RESOURCE_NOT_FOUND_ERROR,
-                    ErrorCode.RESOURCE_NOT_FOUND,
-                    Constants.INFO_NO_EVALUATION_CYCLES_FOUND_WITH_STATUS + status
-            ));
+        if (cycles == null || cycles.isEmpty()) {
+            log.warn(Constants.ERROR_NO_CYCLES_FOUND, status);
+        }
         return cycles;
     }
 
-    /** Validates date relationships between cycle phases. */
     private void validateCycleDates(EvaluationCycle cycle) {
-        LocalDate start = cycle.getStartDate(), end = cycle.getEndDate(),
-                selfEval = cycle.getSelfEvalDeadline(), feedback = cycle.getFeedbackDeadline();
-        if (start == null || end == null || selfEval == null || feedback == null)
-            throw new InvalidOperationException(ErrorUtils.formatError(
-                    ErrorType.VALIDATION_ERROR,
-                    ErrorCode.INVALID_DATE,
-                    Constants.MISSING_CYCLE_DATE_FIELDS
-            ));
+        LocalDate startDate = cycle.getStartDate();
+        LocalDate endDate = cycle.getEndDate();
+        LocalDate selfEvalDeadline = cycle.getSelfEvalDeadline();
+        LocalDate feedbackDeadline = cycle.getFeedbackDeadline();
 
-        if (selfEval.isBefore(start))
-            throw new InvalidOperationException(ErrorUtils.formatError(
-                    ErrorType.VALIDATION_ERROR,
-                    ErrorCode.INVALID_SELF_EVAL_DEADLINE,
-                    Constants.SELF_EVAL_DEADLINE_BEFORE_START
-            ));
+        if (startDate == null || endDate == null || selfEvalDeadline == null || feedbackDeadline == null) {
+            throw new InvalidOperationException(
+                    ErrorUtils.formatError(
+                            ErrorType.VALIDATION_ERROR,
+                            ErrorCode.INVALID_DATE,
+                            Constants.MISSING_CYCLE_DATE_FIELDS
+                    )
+            );
+        }
 
-        if (feedback.isBefore(end))
-            throw new InvalidOperationException(ErrorUtils.formatError(
-                    ErrorType.VALIDATION_ERROR,
-                    ErrorCode.INVALID_DATE,
-                    Constants.FEEDBACK_DEADLINE_BEFORE_END_DATE
-            ));
+        // startDate <= selfEvalDeadline
+        if (selfEvalDeadline.isBefore(startDate)) {
+            throw new InvalidOperationException(
+                    ErrorUtils.formatError(
+                            ErrorType.VALIDATION_ERROR,
+                            ErrorCode.INVALID_SELF_EVAL_DEADLINE,
+                            Constants.SELF_EVAL_DEADLINE_BEFORE_START
+                    )
+            );
+        }
 
-        if (start.isAfter(end))
-            throw new InvalidOperationException(ErrorUtils.formatError(
-                    ErrorType.VALIDATION_ERROR,
-                    ErrorCode.INVALID_DATE,
-                    Constants.START_DATE_AFTER_END_DATE
-            ));
+        // endDate <= feedbackDeadline
+        if (feedbackDeadline.isBefore(endDate)) {
+            throw new InvalidOperationException(
+                    ErrorUtils.formatError(
+                            ErrorType.VALIDATION_ERROR,
+                            ErrorCode.INVALID_DATE,
+                            Constants.FEEDBACK_DEADLINE_BEFORE_END_DATE
+                    )
+            );
+        }
 
-        if (selfEval.isAfter(feedback))
-            throw new InvalidOperationException(ErrorUtils.formatError(
-                    ErrorType.VALIDATION_ERROR,
-                    ErrorCode.INVALID_SELF_EVAL_DEADLINE,
-                    Constants.INFO_SELF_EVAL_DEADLINE_ERROR
-            ));
+        // startDate <= endDate
+        if (startDate.isAfter(endDate)) {
+            throw new InvalidOperationException(
+                    ErrorUtils.formatError(
+                            ErrorType.VALIDATION_ERROR,
+                            ErrorCode.INVALID_DATE,
+                            Constants.START_DATE_AFTER_END_DATE
+                    )
+            );
+        }
+
+        // selfEvalDeadline <= feedbackDeadline
+        if (selfEvalDeadline.isAfter(feedbackDeadline)) {
+            throw new InvalidOperationException(
+                    ErrorUtils.formatError(
+                            ErrorType.VALIDATION_ERROR,
+                            ErrorCode.INVALID_SELF_EVAL_DEADLINE,
+                            Constants.INFO_SELF_EVAL_DEADLINE_ERROR
+                    ));
+        }
     }
 
-    /** Ensures deadlines are not past for the current cycle. */
-    private void validateCycleAccess(EvaluationCycle cycle) {
-        LocalDate today = LocalDate.now();
-        if (cycle.getEndDate() != null && today.isAfter(cycle.getEndDate()))
-            throw new InvalidOperationException(ErrorUtils.formatError(
-                    ErrorType.VALIDATION_ERROR, ErrorCode.INVALID_OPERATION, Constants.ERROR_EVALUATION_FORM_EXPIRED_END_DATE_PASSED));
-        if (cycle.getSelfEvalDeadline() != null && today.isAfter(cycle.getSelfEvalDeadline()))
-            throw new InvalidOperationException(ErrorUtils.formatError(
-                    ErrorType.VALIDATION_ERROR,
-                    ErrorCode.INVALID_OPERATION,
-                    Constants.ERROR_SELF_EVALUATION_DEADLINE_PASSED_FOR_CYCLE
-            ));
+    private void validateStatusTransition(CycleStatus currentStatus, CycleStatus newStatus) {
+        switch (currentStatus) {
+            case IN_PROGRESS:
+                if (newStatus != CycleStatus.COMPLETED) {
+                    throw new InvalidOperationException("An in-progress cycle can only be marked as completed");
+                }
+                break;
 
-        if (cycle.getFeedbackDeadline() != null && today.isAfter(cycle.getFeedbackDeadline()))
-            throw new InvalidOperationException(ErrorUtils.formatError(
-                    ErrorType.VALIDATION_ERROR,
-                    ErrorCode.INVALID_OPERATION,
-                    Constants.ERROR_FEEDBACK_DEADLINE_PASSED_FOR_CYCLE
-            ));
-    }
+            case COMPLETED:
+                throw new InvalidOperationException("A completed cycle cannot be modified or reopened");
 
-    /** Validates status transitions between cycle states. */
-    private void validateStatusTransition(CycleStatus current, CycleStatus target) {
-        if (current == CycleStatus.IN_PROGRESS && target != CycleStatus.COMPLETED)
-            throw new InvalidOperationException("An in-progress cycle can only be marked as completed");
-        if (current == CycleStatus.COMPLETED)
-            throw new InvalidOperationException("A completed cycle cannot be modified or reopened");
+            default:
+                throw new InvalidOperationException("Invalid status transition from " + currentStatus + " to " + newStatus);
+        }
     }
 }
